[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Bad_Guys/BG-01-Yellow_Space_Suit.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Projectiles/BadGuy/Proj-BG-10-Laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Explosions/Ex-03-Pawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Bad_Guys/P_Yellow-sheet-export.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 25.4635

[sub_resource type="Animation" id=2]
resource_name = "Crouch"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Melee"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="BG-01-Yellow_Space_Suit-00" type="KinematicBody2D" groups=[
"badguy",
"hittable",
]]
collision_layer = 2048
collision_mask = 2590
script = ExtResource( 1 )
projectile = ExtResource( 2 )
explode = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
vframes = 2
hframes = 12
frame = 4

[node name="Pos_Shoot" type="Position2D" parent="Sprite"]
position = Vector2( 10, 0 )

[node name="RayCast_Shoot" type="RayCast2D" parent="Sprite"]
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 655386

[node name="RayCast_Stop" type="RayCast2D" parent="Sprite"]
enabled = true
cast_to = Vector2( 40, 0 )
collision_mask = 2

[node name="RayCast_Melee" type="RayCast2D" parent="Sprite"]
visible = false
enabled = true
cast_to = Vector2( 14, 0 )
collision_mask = 2

[node name="RayCast2D_BG_Check" type="RayCast2D" parent="Sprite"]
position = Vector2( 10.9023, 0.115982 )
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.899582, 2.57025 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crouch = SubResource( 2 )
anims/Fall = SubResource( 3 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Melee = SubResource( 6 )
anims/Run = SubResource( 7 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 29 )
collision_mask = 28

[node name="Timer_Shoot" type="Timer" parent="."]

[node name="RayCast_Look_Right" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 1900, 0 )
collision_mask = 10

[node name="RayCast_Look_Left" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -1900, 0 )
collision_mask = 10

[node name="RayCast2D_Up_R" type="RayCast2D" parent="."]
visible = false
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 0, -25 )
collision_mask = 2

[node name="RayCast2D_Up_L" type="RayCast2D" parent="."]
visible = false
position = Vector2( -5, 0 )
enabled = true
cast_to = Vector2( 0, -25 )
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="RayCast_Bump_R" type="RayCast2D" parent="."]
position = Vector2( 0, -10 )
enabled = true
cast_to = Vector2( 31, 0 )
collision_mask = 2072

[node name="RayCast_Bump_L" type="RayCast2D" parent="."]
position = Vector2( 0, -10 )
enabled = true
cast_to = Vector2( -31, 0 )
collision_mask = 2072
[connection signal="timeout" from="Timer_Shoot" to="." method="_on_Timer_Shoot_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
